# gazetimation

./: .buildinfo  .flake8  LICENSE  README.md  gazetimation.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js
.doctrees/: environment.pickle  gazetimation.doctree  genindex.doctree  index.doctree  modules.doctree  readme.doctree
.github/workflows/: docs.yml  flake8.yml  publish.yml  test.yml
_modules/: gazetimation.html  index.html
_sources/: readme.rst.txt
_static/: _version_GENERATED.py  _version_info_GENERATED.json  _version_info_GENERATED.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  readme.rst
source/: conf.py  gazetimation.rst  index.rst  readme.rst
src/: config.py  gaze.py  gazetimation.py  utils.py
tests/: conftest.py  test_gazetimation.py
