[tool.poetry]
name = "gazetimation"
version = "0.1.0"
description = "Gaze estimation from facial landmarks"
authors = ["Shuvo Kumar Paul <shuvo.k.paul@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mediapipe = "^0.8.10"
numpy = "^1.23.2"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
