[tool.poetry]
name = "gazetimation"
version = "0.1.0"
description = "Gaze estimation from facial landmarks"
authors = ["Shuvo Kumar Paul <shuvo.k.paul@gmail.com>"]
license = "MIT"
keywords = ["gaze", "gaze estimation", "head pose", "eye pose"]
readme = "README.md"
homepage = "https://github.com/paul-shuvo/gazetimation"
repository = "https://github.com/paul-shuvo/gazetimation"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
mediapipe = "^0.8.10"
numpy = "^1.23.2"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
black = "^22.6.0"
pytest-cov = "^3.0.0"
furo = "^2022.6.21"
sphinx-autobuild = "^2021.3.14"
sphinx-typo3-theme = "4.7.5"
flake8 = "^5.0.4"
Sphinx = "4.5.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
